--- a/netlify.toml
+++ b/netlify.toml
@@ -6,3 +6,15 @@
   from = "/*"
   to = "/index.html"
   status = 200
+
+[[redirects]]
+  from   = "/analytics/script.js"
+  to     = "https://cloud.umami.is/script.js"
+  status = 200
+  force  = true
+
+[[redirects]]
+  from   = "/analytics/api/*"
+  to     = "https://cloud.umami.is/api/:splat"
+  status = 200
+  force  = true
